# wasm-rust-js

./: .gitignore  Cargo.toml  LICENSE_MIT  package-lock.json
frontend/: bootstrap.ts  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: bson-json.ts  chart-counter.ts  charts-list.js  index.ts  person.ts  snow.ts
src/: arr_of_obj_to_rust.rs  char_counter.rs  fetch_json.rs  js_sys_example.rs  lib.rs  performance_now.rs  web_sys_closures.rs  web_sys_dom.rs
